--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@ layout: default
 
 <p>
   If you would like to suggest addition to our collections, send us a pull request 
-  <a href="https://github.com/language-resources-nepal/language-resources-nepal.github.io.git" target="_blank">here</a>.
+  <a href="https://github.com/language-resources-nepal/language-resources-nepal.github.io" target="_blank">here</a>.
 </p>
